fix(voting-app): use registry service IP for direct connectivity
Replace FQDN registry-api.hostk8s.svc.cluster.local:5000 with direct
service IP 10.101.23.191:5000 to resolve DNS resolution and HTTPS
connectivity issues in worker, vote, and result deployments.

--- a/software/stacks/voting-app/app/result-deployment.yaml
+++ b/software/stacks/voting-app/app/result-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: result
-        image: registry-api.hostk8s.svc.cluster.local:5000/hostk8s-result:latest
+        image: 10.101.23.191:5000/hostk8s-result:latest
         ports:
         - containerPort: 80
           name: http
