--- a/infra/kubernetes/kind-custom.yaml
+++ b/infra/kubernetes/kind-custom.yaml
@@ -13,11 +13,7 @@ networking:
 containerdConfigPatches:
   - |-
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
-      endpoint = ["https://registry.registry.svc.cluster.local:5443", "http://registry.registry.svc.cluster.local:5000"]
-    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5443"]
-      endpoint = ["https://registry.registry.svc.cluster.local:5443"]
-    [plugins."io.containerd.grpc.v1.cri".registry.configs."registry.registry.svc.cluster.local:5443".tls]
-      insecure_skip_verify = true
+      endpoint = ["http://registry-api.hostk8s.svc.cluster.local:5000"]
 
 nodes:
   - role: control-plane
