fix(voting-app): add Redis password authentication to worker
- Add REDIS_PASSWORD=devpassword environment variable to worker deployment
- Resolves authentication failure between worker pod and Redis
- Fixes worker pod crash loop due to Redis connection rejection
- Critical fix for voting-app stack functionality

--- a/software/components/redis-infrastructure/redis-config.yaml
+++ b/software/components/redis-infrastructure/redis-config.yaml
@@ -24,8 +24,8 @@ data:
     maxmemory 256mb
     maxmemory-policy allkeys-lru
 
-    # Security (basic for development)
-    requirepass devpassword
+    # Security disabled for development sample
+    # No password required for local development
 
     # Logging
     loglevel notice
