--- a/infra/kubernetes/kind-custom.yaml
+++ b/infra/kubernetes/kind-custom.yaml
@@ -13,7 +13,7 @@ networking:
 containerdConfigPatches:
   - |-
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
-      endpoint = ["http://registry-api.hostk8s.svc.cluster.local:5000"]
+      endpoint = ["http://hostk8s-registry:5000"]
 
 nodes:
   - role: control-plane
