--- a/software/stacks/voting-app/app/worker-deployment.yaml
+++ b/software/stacks/voting-app/app/worker-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: worker
-        image: localhost:5000/hostk8s-worker:latest
+        image: localhost:5000/hostk8s-worker:no-auth
         env:
         - name: REDIS_HOST
           value: "redis.redis-infrastructure.svc.cluster.local"
