--- a/software/stacks/voting-app/app/voting-ingress.yaml
+++ b/software/stacks/voting-app/app/voting-ingress.yaml
@@ -7,22 +7,22 @@ metadata:
     hostk8s.app: voting-app
     hostk8s.component: ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
   - host: localhost
     http:
       paths:
-      - path: /vote
-        pathType: Prefix
+      - path: /vote(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: vote
             port:
               number: 80
-      - path: /result
-        pathType: Prefix
+      - path: /result(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: result
