fix(voting-app): resolve connectivity issues with environment variable configuration
- Updated vote app to use REDIS_HOST and REDIS_PORT environment variables instead of hardcoded connection
- Updated result app to use DATABASE_URL environment variable for PostgreSQL connection
- Changed vote and result deployments to use no-auth image tags
- Fixes vote form submission 500 errors and result page database connectivity
- Enables proper service discovery and configuration flexibility in Kubernetes

--- a/software/stacks/voting-app/app/result-deployment.yaml
+++ b/software/stacks/voting-app/app/result-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: result
-        image: localhost:5000/hostk8s-result:latest
+        image: localhost:5000/hostk8s-result:no-auth
         ports:
         - containerPort: 80
           name: http
