fix(voting-app): complete asset path fixes for ingress routing
- Update vote deployment image tag to 'fixed' with corrected CSS asset paths
- Update result deployment image tag to 'fixed' with corrected asset paths
- Change vote template CSS reference from Flask url_for() to relative path
- Ensures proper static asset loading through ingress paths /vote and /result

Completes asset path fixes for both vote and result applications in GitOps stack.

--- a/software/stacks/voting-app/app/vote-deployment.yaml
+++ b/software/stacks/voting-app/app/vote-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: vote
-        image: localhost:5000/hostk8s-vote:no-auth
+        image: localhost:5000/hostk8s-vote:fixed
         ports:
         - containerPort: 80
           name: http
