fix(voting-app): resolve ImagePullBackOff errors by updating image tags
- Update vote deployment image tag from 'fixed' to 'latest'
- Update result deployment image tag from 'fixed' to 'latest'
- Update worker deployment image tag from 'no-auth' to 'latest'
- Clean up build script output messaging

Fixes ImagePullBackOff issues that prevented voting app startup after clean/rebuild cycle.
The previous tags no longer exist in the registry after the rebuild.

--- a/software/stacks/voting-app/app/vote-deployment.yaml
+++ b/software/stacks/voting-app/app/vote-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: vote
-        image: localhost:5000/hostk8s-vote:fixed
+        image: localhost:5000/hostk8s-vote:latest
         ports:
         - containerPort: 80
           name: http
