feat: update voting app options to HostK8s Stack vs HostK8s App
- Changed OPTION_A from 'Kubernetes' to 'HostK8s Stack'
- Changed OPTION_B from 'Docker Swarm' to 'HostK8s App'
- Makes voting demo more relevant to HostK8s platform

--- a/software/stacks/voting-app/app/vote-deployment.yaml
+++ b/software/stacks/voting-app/app/vote-deployment.yaml
@@ -27,9 +27,9 @@ spec:
           name: http
         env:
         - name: OPTION_A
-          value: "Kubernetes"
+          value: "HostK8s Stack"
         - name: OPTION_B
-          value: "Docker Swarm"
+          value: "HostK8s App"
         - name: REDIS_HOST
           value: "redis.redis-infrastructure.svc.cluster.local"
         - name: REDIS_PORT
