fix: rename voting-app stack to sample-app with correct namespace references
- Updated namespace from voting-app to sample-app
- Updated all service DNS names to use sample-app.svc.cluster.local
- Updated stack.yaml path to software/stacks/sample-app/app
- Updated kustomization name from app-voting to app-sample
- Updated all hostk8s.app labels to sample-app
- Updated ingress name to sample-app-ingress
- Updated repository.yaml to include sample-app path

--- a/software/stacks/sample-app/app/db-deployment.yaml
+++ b/software/stacks/sample-app/app/db-deployment.yaml
@@ -2,10 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: db
-  namespace: voting-app
+  namespace: sample-app
   labels:
     app: db
-    hostk8s.app: voting-app
+    hostk8s.app: sample-app
     hostk8s.component: database
 spec:
   replicas: 1
@@ -16,7 +16,7 @@ spec:
     metadata:
       labels:
         app: db
-        hostk8s.app: voting-app
+        hostk8s.app: sample-app
         hostk8s.component: database
     spec:
       containers:
