--- a/software/stacks/sample-app/app/vote-deployment.yaml
+++ b/software/stacks/sample-app/app/vote-deployment.yaml
@@ -2,10 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vote
-  namespace: voting-app
+  namespace: sample-app
   labels:
     app: vote
-    hostk8s.app: voting-app
+    hostk8s.app: sample-app
     hostk8s.component: vote-service
 spec:
   replicas: 2
@@ -16,7 +16,7 @@ spec:
     metadata:
       labels:
         app: vote
-        hostk8s.app: voting-app
+        hostk8s.app: sample-app
         hostk8s.component: vote-service
     spec:
       containers:
