--- a/software/stacks/sample-app/app/db-service.yaml
+++ b/software/stacks/sample-app/app/db-service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db
-  namespace: voting-app
+  namespace: sample-app
   labels:
     app: db
-    hostk8s.app: voting-app
+    hostk8s.app: sample-app
     hostk8s.component: database
 spec:
   selector:
