--- a/software/stacks/sample-app/app/kustomization.yaml
+++ b/software/stacks/sample-app/app/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 metadata:
   name: voting-app
   labels:
-    hostk8s.app: voting-app
+    hostk8s.app: sample-app
 
 resources:
   - namespace.yaml
@@ -18,4 +18,4 @@ resources:
   - voting-ingress.yaml
 
 commonLabels:
-  hostk8s.app: voting-app
+  hostk8s.app: sample-app
