--- a/software/stacks/sample-app/app/namespace.yaml
+++ b/software/stacks/sample-app/app/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: voting-app
+  name: sample-app
   labels:
-    hostk8s.app: voting-app
+    hostk8s.app: sample-app
