--- a/software/stacks/sample-app/app/result-service.yaml
+++ b/software/stacks/sample-app/app/result-service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: result
-  namespace: voting-app
+  namespace: sample-app
   labels:
     app: result
-    hostk8s.app: voting-app
+    hostk8s.app: sample-app
     hostk8s.component: result-service
 spec:
   selector:
