--- a/software/stacks/sample-app/app/voting-ingress.yaml
+++ b/software/stacks/sample-app/app/voting-ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: voting-app-ingress
-  namespace: voting-app
+  name: sample-app-ingress
+  namespace: sample-app
   labels:
-    hostk8s.app: voting-app
+    hostk8s.app: sample-app
     hostk8s.component: ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
