--- a/src/sample-app/docker-compose.yml
+++ b/src/sample-app/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - DATABASE_URL=postgres://postgres:password@db:5432/votes
     depends_on:
       - db
+    command: ["nodemon", "server.js"]
 
   worker:
     build: ./worker
