fix(sample-app): resolve kustomization naming conflict and improve storage paths
- Change kustomization name from 'app-sample' to 'app-sample-app' to avoid conflicts with sample stack
- Update Kind cluster storage mounts to support persistent volumes and postgres data
- Fix registry storage path to use dedicated data/registry directory
- Ensure sample-app and sample stacks can coexist without resource naming conflicts

This resolves deployment conflicts when both stacks are deployed simultaneously.

--- a/infra/kubernetes/kind-custom.yaml
+++ b/infra/kubernetes/kind-custom.yaml
@@ -50,7 +50,13 @@ nodes:
         containerPath: /mnt/local-storage
         readOnly: false
       - hostPath: ./data/storage
-        containerPath: /mnt/data
+        containerPath: /mnt/storage
+        readOnly: false
+      - hostPath: ./data/pv
+        containerPath: /mnt/pv
+        readOnly: false
+      - hostPath: ./data/postgres
+        containerPath: /mnt/postgres
         readOnly: false
 
   # - role: worker
