fix(stacks): resolve GitRepository ignore pattern conflicts between sample stacks
Update both sample and sample-app GitRepository configurations to include
both stack paths in their ignore patterns, preventing path conflicts when
both stacks are deployed simultaneously.

Changes:
- software/stacks/sample/repository.yaml: Add sample-app path to ignore pattern
- software/stacks/sample-app/repository.yaml: Add sample path to ignore pattern

This ensures both stacks can coexist without overwriting each other's
repository access patterns during Flux reconciliation.

--- a/software/stacks/sample/repository.yaml
+++ b/software/stacks/sample/repository.yaml
@@ -11,6 +11,7 @@ spec:
   ignore: |
     # exclude all
     /*
-    # include shared components and this stack
+    # include shared components and both stacks
     !/software/components/
     !/software/stacks/sample/
+    !/software/stacks/sample-app/
