--- a/software/stacks/bootstrap.yaml
+++ b/software/stacks/bootstrap.yaml
@@ -6,7 +6,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: bootstrap-stack
+  name: bootstrap-${SOFTWARE_STACK}
   namespace: flux-system
 spec:
   interval: 1m
