--- a/software/stacks/bootstrap.yaml
+++ b/software/stacks/bootstrap.yaml
@@ -14,7 +14,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system-${SOFTWARE_STACK}
   path: ./software/stacks/${SOFTWARE_STACK}
   targetNamespace: flux-system
   prune: true
