--- a/software/stacks/sample-app/stack.yaml
+++ b/software/stacks/sample-app/stack.yaml
@@ -14,7 +14,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system-${SOFTWARE_STACK}
   path: ./software/components/redis-infrastructure
   prune: true
   wait: true
@@ -43,7 +43,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system-${SOFTWARE_STACK}
   path: ./software/stacks/sample-app/app
   prune: true
   wait: true
