fix: use hardcoded repository names in stack.yaml files
Since stack.yaml files are read directly from Git by Flux, they cannot use
template variables. Each stack now explicitly references its own GitRepository:
- sample stack uses flux-system-sample
- sample-app stack uses flux-system-sample-app

--- a/software/stacks/sample-app/stack.yaml
+++ b/software/stacks/sample-app/stack.yaml
@@ -14,7 +14,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system-${SOFTWARE_STACK}
+    name: flux-system-sample-app
   path: ./software/components/redis-infrastructure
   prune: true
   wait: true
@@ -43,7 +43,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system-${SOFTWARE_STACK}
+    name: flux-system-sample-app
   path: ./software/stacks/sample-app/app
   prune: true
   wait: true
