feat: implement dual GitRepository architecture for stack independence
- flux-system: shared repository for components (cert-manager, redis, etc.)
- flux-system-<stack>: stack-specific repository for apps
- Components reference flux-system for shared infrastructure
- Apps reference stack-specific repository for isolation
- Removal logic preserves shared components and flux-system repository
- Only removes stack-specific resources and repositories

This prevents the issue where removing one stack breaks another's components.

--- a/software/stacks/repository.yaml
+++ b/software/stacks/repository.yaml
@@ -6,6 +6,20 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
+  name: flux-system
+  namespace: flux-system
+spec:
+  interval: 5m
+  url: https://community.opengroup.org/danielscholl/hostk8s
+  ref:
+    branch: main
+  ignore: |
+    exclude all
+    !/software/components/
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
   name: flux-system-${SOFTWARE_STACK}
   namespace: flux-system
 spec:
@@ -14,8 +28,5 @@ spec:
   ref:
     branch: ${GITOPS_BRANCH}
   ignore: |
-    # exclude all
-    /*
-    # include components and the specific stack
-    !/software/components/
+    exclude all
     !/software/stacks/${SOFTWARE_STACK}/
