feat: implement label-based stack cleanup system
- Add hostk8s.stack and hostk8s.type labels to kustomizations for tracking
- Simplify make down logic to use label selectors instead of complex name patterns
- Remove components GitRepository only when no component kustomizations remain
- Cross-platform consistency between bash and PowerShell scripts

--- a/software/stacks/sample-app/stack.yaml
+++ b/software/stacks/sample-app/stack.yaml
@@ -8,6 +8,9 @@ kind: Kustomization
 metadata:
   name: component-redis-infrastructure
   namespace: flux-system
+  labels:
+    hostk8s.stack: sample-app
+    hostk8s.type: component
 spec:
   interval: 1h
   retryInterval: 1m
@@ -35,6 +38,9 @@ kind: Kustomization
 metadata:
   name: app-sample-app
   namespace: flux-system
+  labels:
+    hostk8s.stack: sample-app
+    hostk8s.type: application
 spec:
   dependsOn:
     - name: component-redis-infrastructure
