fix: correct Windows PowerShell registry script issues
- Revert cross-platform Kubernetes manifest changes that broke architecture
- Fix PowerShell external command variable expansion issues using Invoke-Expression pattern
- Fix Windows-specific path handling (backslash paths, Docker volume mounts)
- Update cluster-status.ps1 registry detection functions for Windows compatibility
- Maintain functional parity between .sh and .ps1 scripts per ADR-009

Follows infra/scripts/README.md PowerShell variable expansion guidelines.
Preserves ADR-011 hybrid registry architecture without breaking cross-platform compatibility.

--- a/infra/manifests/registry-ui.yaml
+++ b/infra/manifests/registry-ui.yaml
@@ -49,7 +49,7 @@ spec:
         - name: CATALOG_ELEMENTS_LIMIT
           value: "1000"
         - name: BASE_PATH
-          value: "/registry"
+          value: "/"
         resources:
           requests:
             memory: "64Mi"
@@ -167,6 +167,10 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location = /registry {
+        return 301 $scheme://$http_host/registry/;
+      }
 spec:
   ingressClassName: nginx
   rules:
