--- a/infra/manifests/registry-ui.yaml
+++ b/infra/manifests/registry-ui.yaml
@@ -166,19 +166,15 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/server-snippet: |
-      location = /registry {
-        return 301 $scheme://$http_host/registry/;
-      }
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
   - host: localhost
     http:
       paths:
-      - path: /registry(/|$)(.*)
-        pathType: ImplementationSpecific
+      - path: /registry
+        pathType: Prefix
         backend:
           service:
             name: registry-ui
