--- a/infra/manifests/registry-ui.yaml
+++ b/infra/manifests/registry-ui.yaml
@@ -166,15 +166,22 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
   rules:
   - host: localhost
     http:
       paths:
-      - path: /registry
-        pathType: Prefix
+      - path: /registry$
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: registry-ui
+            port:
+              number: 80
+      - path: /registry/(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: registry-ui
