feat: implement ephemeral secrets and migrate sample-app to CloudNativePG
- Add CloudNativePG postgres operator component
- Implement ephemeral secret management system with contracts
- Create cross-platform secret generation scripts (bash/PowerShell)
- Migrate sample-app from static database to CNPG cluster
- Update worker/result services to use generated secrets
- Add secret contract specification documentation
- Integrate automatic secret generation into make workflow

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,16 @@ compress.md
 # Data directory (runtime artifacts, credentials, storage)
 data/
 
+# Generated secrets (never commit these)
+software/stacks/*/secrets/*.yaml
+software/stacks/*/secrets.yaml
+*.secret.yaml
+*.secrets.yaml
+
+# Secret generation temporary files
+*.tmp.yaml
+secrets.tmp.*
+
 # Git Worktree directories
 trees/
 
