--- a/software/stacks/sample-app/app/kustomization.yaml
+++ b/software/stacks/sample-app/app/kustomization.yaml
@@ -13,9 +13,8 @@ resources:
   - result-deployment.yaml
   - result-service.yaml
   - worker-deployment.yaml
-  - db-deployment.yaml
-  - db-service.yaml
   - voting-ingress.yaml
+  - postgres/
 
 commonLabels:
   hostk8s.app: sample-app
