--- a/software/stacks/sample-app/stack.yaml
+++ b/software/stacks/sample-app/stack.yaml
@@ -1,7 +1,30 @@
 ######################
 ## Voting App Stack Components
-## Registry and Redis infrastructure must be ready before applications
+## PostgreSQL operator and Redis infrastructure must be ready before applications
 ######################
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: component-postgres
+  namespace: flux-system
+  labels:
+    hostk8s.stack: sample-app
+    hostk8s.type: component
+spec:
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./software/components/postgres
+  prune: true
+  wait: true
+  healthChecks:
+    - kind: Deployment
+      name: cnpg-controller-manager
+      namespace: hostk8s
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -43,6 +66,7 @@ metadata:
     hostk8s.type: application
 spec:
   dependsOn:
+    - name: component-postgres
     - name: component-redis-infrastructure
   interval: 1h
   retryInterval: 1m
@@ -62,7 +86,4 @@ spec:
       namespace: sample-app
     - kind: Deployment
       name: worker
-      namespace: sample-app
-    - kind: Deployment
-      name: db
       namespace: sample-app
