refactor: rename secrets contract files and update make pattern
- Rename secrets.contract.yaml to hostk8s.secrets.yaml for consistency
- Update Makefile to use separate targets (secrets-generate, secrets-show, secrets-clean)
- Match the make up pattern for consistency across commands
- Update .gitignore to allow hostk8s.secrets.yaml files
- Update both bash and PowerShell scripts to look for new filename

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ software/stacks/*/secrets/*.yaml
 software/stacks/*/secrets.yaml
 *.secret.yaml
 *.secrets.yaml
+!hostk8s.secrets.yaml
 
 # Secret generation temporary files
 *.tmp.yaml
