refactor: simplify sample-app structure
- Rename app/ folder to manifests/ for clarity
- Flatten postgres subfolder structure
- Rename postgres files to database.yaml and database-storage.yaml
- Update kustomization files to reference new structure
- Simplify organization for better readability

--- a/software/stacks/sample-app/manifests/kustomization.yaml
+++ b/software/stacks/sample-app/manifests/kustomization.yaml
@@ -8,13 +8,14 @@ metadata:
 
 resources:
   - namespace.yaml
+  - database-storage.yaml
+  - database.yaml
   - vote-deployment.yaml
   - vote-service.yaml
   - result-deployment.yaml
   - result-service.yaml
   - worker-deployment.yaml
   - voting-ingress.yaml
-  - postgres/
 
 commonLabels:
   hostk8s.app: sample-app
