refactor: implement generic secret contract format
- Replace type-specific secret templates with generic data format
- Each secret now explicitly defines its data keys and values
- Support static values with 'value:' field
- Support generated values with 'generate:' field (password, token, hex, uuid)
- Maintain backwards compatibility for legacy type-based contracts
- Simplify contract readability - no hidden templates or assumptions
- Update both bash and PowerShell implementations

--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -7,8 +7,15 @@ spec:
     # PostgreSQL database credentials for voting app
     - name: postgres-credentials
       namespace: sample-app
-      type: postgresql
-      spec:
-        username: postgres
-        database: voting
-        cluster: voting-db
+      data:
+        - key: username
+          value: postgres
+        - key: password
+          generate: password
+          length: 8
+        - key: database
+          value: voting
+        - key: host
+          value: voting-db-rw.sample-app.svc.cluster.local
+        - key: port
+          value: "5432"
