--- a/software/components/postgres/component.yaml
+++ b/software/components/postgres/component.yaml
@@ -8,7 +8,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: component-postgres
+  name: component-postgres-operator
   namespace: flux-system
   labels:
     hostk8s.component: postgres
