fix: correct CNPG deployment name in health check
- Update health check from cnpg-controller-manager to cnpg-operator-cloudnative-pg
- Matches actual deployment name created by cloudnative-pg Helm chart

--- a/software/stacks/sample-app/stack.yaml
+++ b/software/stacks/sample-app/stack.yaml
@@ -23,7 +23,7 @@ spec:
   wait: true
   healthChecks:
     - kind: Deployment
-      name: cnpg-controller-manager
+      name: cnpg-operator-cloudnative-pg
       namespace: hostk8s
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
