fix: remove invalid monitoring.enabled field from CNPG Cluster
- monitoring.enabled field does not exist in CNPG schema
- Remove entire monitoring section to disable monitoring for local development
- Fixes schema validation error in app-sample-app kustomization

--- a/software/stacks/sample-app/manifests/database.yaml
+++ b/software/stacks/sample-app/manifests/database.yaml
@@ -77,6 +77,4 @@ spec:
   superuserSecret:
     name: postgres-credentials
 
-  # Monitoring disabled for local dev
-  monitoring:
-    enabled: false
+  # Monitoring disabled for local dev (omit monitoring section to disable)
