fix: add url field to postgres credentials secret
- Add complete PostgreSQL URL for result app DATABASE_URL environment variable
- Uses generated password in connection string
- Enables result pod to connect to database successfully

--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -19,3 +19,5 @@ spec:
           value: voting-db-rw.sample-app.svc.cluster.local
         - key: port
           value: "5432"
+        - key: url
+          value: "postgresql://postgres:uoBrUd5Q@voting-db-rw.sample-app.svc.cluster.local:5432/voting"
