fix: enable CNPG superuser access with custom secret
- Add enableSuperuserAccess: true to allow custom superuser secret
- Required for applications to authenticate with postgres user
- Enables proper database connectivity for worker and result pods

--- a/software/stacks/sample-app/manifests/database.yaml
+++ b/software/stacks/sample-app/manifests/database.yaml
@@ -73,7 +73,8 @@ spec:
       - host all all 0.0.0.0/0 md5
       - host all all ::0/0 md5
 
-  # Reference to auto-generated superuser secret
+  # Enable superuser access with our custom secret
+  enableSuperuserAccess: true
   superuserSecret:
     name: postgres-credentials
 
