fix: configure CNPG for passwordless authentication
- Change pg_hba rules from md5 to trust for local development
- Remove superuser secret configuration
- Update worker deployment to use static postgres user/db values
- Update result deployment to use passwordless DATABASE_URL
- Matches original voting app design for simple local development

--- a/software/stacks/sample-app/manifests/result-deployment.yaml
+++ b/software/stacks/sample-app/manifests/result-deployment.yaml
@@ -27,10 +27,7 @@ spec:
           name: http
         env:
         - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: postgres-credentials
-              key: url
+          value: "postgresql://postgres@voting-db-rw.sample-app.svc.cluster.local:5432/voting"
         resources:
           requests:
             memory: "64Mi"
