--- a/software/stacks/sample-app/manifests/database.yaml
+++ b/software/stacks/sample-app/manifests/database.yaml
@@ -68,14 +68,12 @@ spec:
       log_statement: "all"
       log_duration: "on"
 
-    # pg_hba rules for authentication
+    # pg_hba rules for authentication - allow trust for local development
     pg_hba:
-      - host all all 0.0.0.0/0 md5
-      - host all all ::0/0 md5
+      - host all all 0.0.0.0/0 trust
+      - host all all ::0/0 trust
 
-  # Enable superuser access with our custom secret
-  enableSuperuserAccess: true
-  superuserSecret:
-    name: postgres-credentials
+  # Disable superuser access - not needed for local development with trust auth
+  enableSuperuserAccess: false
 
   # Monitoring disabled for local dev (omit monitoring section to disable)
