feat: migrate Redis component to dual Helm chart deployment
- Replace 7 manual Kubernetes manifests with HelmRepository and HelmRelease resources
- Add Bitnami Redis Helm chart for production-ready Redis server
- Add Redis Commander Helm chart for web-based management UI
- Maintain service compatibility and current configuration settings
- Keep legacy manifests temporarily for zero-downtime migration
- Configure passwordless authentication to match development environment
- Set up proper resource limits and persistence (1Gi storage, 256MB memory)

This migration follows the same operator pattern as CloudNativePG, using GitOps
managed Helm charts instead of manual Kubernetes manifest maintenance.

--- a/software/components/redis-infrastructure/kustomization.yaml
+++ b/software/components/redis-infrastructure/kustomization.yaml
@@ -9,6 +9,9 @@ metadata:
 
 resources:
   - namespace.yaml
+  - source.yaml
+  - release.yaml
+  # Legacy manual manifests - will be removed after testing
   - redis-config.yaml
   - redis-pvc.yaml
   - redis-deployment.yaml
@@ -18,9 +21,3 @@ resources:
 
 commonLabels:
   hostk8s.component: redis-infrastructure
-
-images:
-  - name: redis
-    newTag: "7-alpine"
-  - name: rediscommander/redis-commander
-    newTag: "latest"
