feat: update Redis component with proper secret management and Git-based Helm chart

--- a/software/components/redis-infrastructure/kustomization.yaml
+++ b/software/components/redis-infrastructure/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - namespace.yaml
   - source.yaml
   - release.yaml
+  - hostk8s.secrets.yaml
   # Legacy manual manifests - will be removed after testing
   - redis-config.yaml
   - redis-pvc.yaml
