--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -10,9 +10,6 @@ spec:
       data:
         - key: username
           value: postgres
-        - key: password
-          generate: password
-          length: 8
         - key: database
           value: voting
         - key: host
@@ -20,4 +17,4 @@ spec:
         - key: port
           value: "5432"
         - key: url
-          value: "postgresql://postgres:uoBrUd5Q@voting-db-rw.sample-app.svc.cluster.local:5432/voting"
+          value: "postgresql://postgres@voting-db-rw.sample-app.svc.cluster.local:5432/voting"
