--- a/software/components/redis-infrastructure/source.yaml
+++ b/software/components/redis-infrastructure/source.yaml
@@ -10,7 +10,7 @@ spec:
   url: https://charts.bitnami.com/bitnami
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+kind: GitRepository
 metadata:
   name: redis-commander
   namespace: flux-system
@@ -18,4 +18,6 @@ metadata:
     hostk8s.component: redis-infrastructure
 spec:
   interval: 5m
-  url: https://kfirfer.github.io/redis-commander/
+  url: https://github.com/joeferner/redis-commander
+  ref:
+    branch: master
