fix: move Redis Commander secret contract to sample-app stack
- Move redis-commander-credentials from component to stack secret contract
- Remove invalid SecretContract resource from Redis component kustomization
- Secret generation script expects contracts in stacks, not components
- This fixes the 'no matches for kind SecretContract' error in Flux

--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -18,3 +18,12 @@ spec:
           value: "5432"
         - key: url
           value: "postgresql://postgres@voting-db-rw.sample-app.svc.cluster.local:5432/voting"
+    # Redis Commander web UI credentials
+    - name: redis-commander-credentials
+      namespace: redis-infrastructure
+      data:
+        - key: username
+          value: admin
+        - key: password
+          generate: password
+          length: 12
