fix: migrate Redis component to dual Helm chart deployment
Replace 7 manual Kubernetes manifests with HelmRepository and HelmRelease resources
- Add OCIRepository for Bitnami Redis (fixes OCI protocol unsupported error)
- Add GitRepository source for Redis Commander chart from joeferner repo
- Configure Bitnami Redis with passwordless authentication for development
- Set up Redis Commander with proper secret-based credentials
- Maintain service compatibility and resource limits
- Keep legacy manifests temporarily during migration

This completes the Redis infrastructure migration from manual manifests
to GitOps-managed Helm charts using Flux OCIRepository and GitRepository sources.

--- a/software/components/redis-infrastructure/source.yaml
+++ b/software/components/redis-infrastructure/source.yaml
@@ -1,13 +1,15 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+kind: OCIRepository
 metadata:
-  name: bitnami
+  name: bitnami-redis
   namespace: flux-system
   labels:
     hostk8s.component: redis-infrastructure
 spec:
   interval: 5m
-  url: https://charts.bitnami.com/bitnami
+  url: oci://registry-1.docker.io/bitnamicharts/redis
+  ref:
+    tag: "22.0.7"
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
