--- a/software/components/redis-infrastructure/release.yaml
+++ b/software/components/redis-infrastructure/release.yaml
@@ -9,11 +9,10 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: redis
-      version: ">=22.0.0 <23.0.0"
+      chart: .
       sourceRef:
-        kind: HelmRepository
-        name: bitnami
+        kind: OCIRepository
+        name: bitnami-redis
         namespace: flux-system
   values:
     # Architecture - simple replication for development
