fix: use HelmRepository with pinned Redis version for Flux compatibility
- Replace OCIRepository with HelmRepository (Flux v2.6.4 doesn't support OCIRepository in HelmRelease)
- Pin Redis chart to version 21.0.0 to avoid OCI protocol issues
- Keep Redis Commander GitRepository approach (working correctly)
- This ensures compatibility with current Flux version while maintaining Helm chart migration

--- a/software/components/redis-infrastructure/release.yaml
+++ b/software/components/redis-infrastructure/release.yaml
@@ -9,10 +9,11 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: .
+      chart: redis
+      version: "21.0.0"  # Pin to pre-OCI version
       sourceRef:
-        kind: OCIRepository
-        name: bitnami-redis
+        kind: HelmRepository
+        name: bitnami
         namespace: flux-system
   values:
     # Architecture - simple replication for development
