--- a/software/components/redis-infrastructure/source.yaml
+++ b/software/components/redis-infrastructure/source.yaml
@@ -1,15 +1,13 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: OCIRepository
+kind: HelmRepository
 metadata:
-  name: bitnami-redis
+  name: bitnami
   namespace: flux-system
   labels:
     hostk8s.component: redis-infrastructure
 spec:
   interval: 5m
-  url: oci://registry-1.docker.io/bitnamicharts/redis
-  ref:
-    tag: "22.0.7"
+  url: https://charts.bitnami.com/bitnami
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
